# cmake-for-cpython

./: CMakeLists.txt  pyconfig.h.in
.github/workflows/: build.yml
Modules/: CMakeLists.txt
Modules/_hacl/: CMakeLists.txt
Modules/_sqlite/: CMakeLists.txt
Modules/_sqlite/cmake/: PyCheckSQLiteFunc.cmake
Objects/: CMakeLists.txt
PCbuild/: _freeze_module.vcxproj
Parser/: CMakeLists.txt
Programs/: CMakeLists.txt
Python/: CMakeLists.txt
cmake/: AlignOf.cmake  PyCheckCSourceRuns.cmake  PyCheckFunc.cmake  PyCheckNetdbFunc.cmake  PyCheckPasswdMember.cmake  PyCheckPthreadSymbol.cmake  PyCheckRtFunc.cmake  PyCheckSocketFunc.cmake  PyCheckStatMember.cmake  PyCoerceInt.cmake  check-broken-sem-getvalue.c  check-builtin-atomic.c  check-chflags.c  check-dirent-d-type.c  check-getaddrinfo.c  check-getpgrp.c  check-getrandom-syscall.c  check-getrandom.c  check-setpgrp.c  check-stdatomic.c  platform-triplet.c
